[package]
name = "dazeus-plugin-karma"
version = "0.1.0"
authors = ["Ruben Nijveld <ruben@gewooniets.nl>"]

[dependencies.dazeus]
version = "0.4"

[dependencies.docopt]
version = "0.6"

[dependencies.rustc-serialize]
version = "0.3"

[dependencies.log]
version = "0.3"

[dependencies.env_logger]
version = "0.3"

[dependencies.chrono]
version = "0.2"
