[package]
name = "dazeus-plugin-karma"
version = "0.1.0"
authors = ["Ruben Nijveld <ruben@gewooniets.nl>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
dazeus = "0.4"
docopt = "1.1.0"
env_logger = "0.8.1"
log = "0.4.11"
nom = "6.0.0"
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"

[dependencies.rustc-serialize]
version = "0.3"

[profile.release]
overflow-checks = true